--- a/Documento Final/Secciones/2_Introduccion.tex
+++ b/Documento Final/Secciones/2_Introduccion.tex
@@ -6,6 +6,6 @@ La solución a esta problemática se materializa en la reactivación e implement
 
 El proyecto comprende dos grandes componentes: la reintegración de la plataforma UnaCloud de la Universidad de los Andes y el proyecto QuickCloud de la Universidad del Quindío. La integración con QuickCloud se estableció tras identificarla como una alternativa más avanzada y actualizada que UnaCloud. El equipo de la Universidad de los Andes se encargará de desarrollar un clúster de HPC utilizando QuickCloud como base. Inicialmente, el diseño consistía en un clúster utilizando contenedores Docker como host de los nodos de cómputo, que serían desplegados en las máquinas del laboratorio Waira. Sin embargo, esta aproximación fue reconsiderada debido a que el software Slurm, esencial para el clúster, requería acceso a permisos de kernel que eran muy complejos de otorgar dentro de contenedores. Ante este desafío, el diseño se replanteó utilizando máquinas virtuales de Debian, creadas especialmente para minimizar el consumo de recursos ajenos a su funcionalidad. Este nuevo diseño otorgó mayor libertad para la asignación de permisos a todos los diferentes componentes de software que hacen funcionar al clúster, como Slurm, Munged y OpenMPI. Además, se vio la necesidad de registrar la información de los usuarios en un almacenamiento dedicado, por lo que se decidió usar un NAS para espacios de usuarios individuales. Se ha realizado una investigación exhaustiva de la documentación de Slurm, que es la herramienta utilizada por el clúster Hypatia para el agendamiento de tareas en entornos HPC. Esto ha proporcionado un conocimiento extensivo del funcionamiento del sistema de Hypatia, con el fin de replicarlo y adaptarlo al entorno de los laboratorios y un sistema de nube.
 
-[Ingresar Resultados]
+os resultados del proyecto culminaron en la implementación exitosa de la plataforma UnaCloud. Se desarrolló un portal web funcional que permite el registro y la autenticación de usuarios con roles de "Investigador" y "Administrador". La plataforma orquesta un clúster HPC basado en Slurm, desplegado sobre máquinas virtuales Debian que se ejecutan en estaciones de trabajo Windows subutilizadas. Para ambos roles, la interfaz gráfica permite monitorear y gestionar el estado de los nodos (iniciar, detener, reparar), además de proveer acceso a una terminal SSH integrada para enviar trabajos y gestionar archivos. La diferencia clave es que el rol de Administrador posee permisos sudo en el sistema operativo, lo que le permite editar la configuración del nodo cabeza de Slurm y de los demás nodos directamente vía SSH. El flujo completo, desde la carga de un script, su ejecución en múltiples nodos y la posterior descarga de resultados, ha sido validado, demostrando la viabilidad de la solución para el aprovechamiento de recursos ociosos en un entorno académico.
 
 Este documento está organizado para proporcionar una comprensión clara y detallada del proyecto UnaCloud. Después de esta introducción, la sección de Descripción General presentará los objetivos específicos del proyecto. La sección de Diseño y Especificaciones ahondará en la definición del problema y establecerá los requerimientos funcionales y no funcionales precisos, así como los criterios de aceptación para soluciones aproximadas. La sección de Desarrollo del Diseño detallará las alternativas de diseño consideradas, los recursos disponibles y la evolución del diseño del clúster. La sección de Implementación describirá las etapas de desarrollo y los resultados esperados de la implementación. La sección de Validación explicará los métodos y presentará los resultados de las pruebas realizadas para asegurar que las especificaciones se cumplan. Finalmente, la sección de Conclusiones resumirá el trabajo realizado, discutirá el desempeño y las limitaciones, y presentará el trabajo futuro. Las Referencias utilizadas a lo largo del documento se encontrarán en su sección correspondiente, y cualquier material complementario se incluirá en el Apéndice. Los agradecimientos a las personas e instituciones que contribuyeron significativamente al desarrollo de este proyecto se incluirán al final de este documento, si son necesarios.
