--- a/Documento Final/Secciones/3_Descripcion_General.tex
+++ b/Documento Final/Secciones/3_Descripcion_General.tex
@@ -17,6 +17,15 @@ Como respuesta a esta necesidad se presenta el modelo "Social Cloud" como un eco
 
 Entre sus beneficios se incluyen la centralidad, facilidad de uso, escalabilidad, ubicuidad y un entorno de aprendizaje superior en comparación con los laboratorios físicos (Encalada & Sequera, 2017). Aborda desafíos como las horas limitadas de laboratorio, los altos costos y la complejidad de integrar nuevas tecnologías, al hacer que la infraestructura sea transparente y escalable para los usuarios (Encalada & Sequera, 2017). 
 
-\subsection{Proposito}
+\subsection{Propósito y justificación del proyecto}
 
-El propósito del clúster UnaCloud es proveer una herramienta a la comunidad universitaria de la Universidad de los Andes y potencialmente externa para que exploren las capacidades y funcionamiento de un clúster HPC. Mediante la utilización de recursos subutilizados de las salas de computo de la universidad buscamos dar a conocer las capacidades investigativas que un clúster como Hypatia tienen sin exponer este servicio a sobrecargas. Ademas de proveer esta funcionalidad queremos instigar a otros estudiante a que exploren las capacidades y oportunidades que el mundo de la computación paralela exponen. Existen muchas mas aplicaciones para la infraestructura subyacente de computación oportunista que implementa UnaCloud, diferentes de HPC.
+El propósito del clúster UnaCloud es proveer una herramienta a la comunidad universitaria de la Universidad de los Andes, y potencialmente a externos, para que exploren las capacidades y el funcionamiento de un clúster de Computación de Alto Rendimiento (HPC). Mediante la utilización de los recursos computacionales subutilizados de las salas de cómputo, se busca dar a conocer las capacidades investigativas que un clúster de producción como Hypatia ofrece, pero sin exponer este último a sobrecargas o a tareas de prueba. Adicionalmente, se quiere motivar a otros estudiantes a que exploren las oportunidades que ofrece el mundo de la computación paralela, ya que la infraestructura de computación oportunista implementada tiene aplicaciones que van más allá del HPC.
+
+Para lograr este propósito, el diseño de UnaCloud se fundamenta en un análisis de soluciones existentes, permitiéndonos posicionar nuestro proyecto como una solución única y pragmática para el contexto específico de la Universidad.
+
+\begin{itemize}
+    \item \textbf{Lecciones de Freyr+ y Justificación de UnaCloud:} El trabajo sobre Freyr+ demuestra el potencial de la "cosecha" de recursos ociosos en entornos sin servidor (serverless) mediante aprendizaje por refuerzo profundo. Si bien es un enfoque poderoso, su implementación es compleja. UnaCloud adopta el principio fundamental de la cosecha de recursos, pero lo aplica de manera más directa y alcanzable para la infraestructura presente: en lugar de un gestor de IA, se utiliza un orquestador (servidor Go) que controla VirtualBox vía SSH. Esta decisión ofrece una solución funcional y no intrusiva que maximiza el uso de las estaciones de trabajo existentes sin la sobrecarga de implementar un sistema de IA desde cero.
+    \item \textbf{Lecciones del Modelo "Social Cloud" y Justificación de UnaCloud:} El modelo "Social Cloud" valida la transición de laboratorios físicos a virtuales para mejorar la accesibilidad. Sin embargo, su enfoque es proveer escritorios virtuales individuales (VDI) para la enseñanza. UnaCloud extiende este concepto: no solo virtualiza los recursos, sino que los integra en un clúster de HPC cohesivo. Se utilizan máquinas virtuales Debian como nodos de cómputo interconectados y gestionados por Slurm. Por lo tanto, mientras que el "Social Cloud" democratiza el acceso al software, UnaCloud democratiza el acceso a la potencia de cómputo para la investigación, un problema no resuelto para muchos estudiantes y proyectos en la universidad.
+\end{itemize} 
+
+En conclusión, el proyecto UnaCloud se justifica porque llena un vacío específico: ninguna de las soluciones existentes ofrece un método directo y pragmático para convertir un conjunto de estaciones de trabajo Windows subutilizadas en un clúster HPC funcional basado en Slurm, que además sea fácil de gestionar a través de una interfaz web.
