--- a/Documento Final/Secciones/1_Resumen.tex
+++ b/Documento Final/Secciones/1_Resumen.tex
@@ -1,3 +1,3 @@
 \section{Resumen}
 
-Resumen del trabajo desarrollado: motivación, el problema que se resuelve, los resultados obtenidos (aprox. 10 líneas)
+El proyecto UnaCloud aborda la subutilización de la infraestructura computacional en la Universidad de los Andes , un problema que limita el potencial de investigación de la comunidad académica por la falta de acceso a herramientas de Computación de Alto Rendimiento (HPC). Como solución, se desarrolló una plataforma web que transforma estaciones de trabajo ociosas en un clúster HPC funcional, gestionado por Slurm y desplegado sobre máquinas virtuales. La plataforma resultante ofrece una interfaz gráfica para la orquestación remota de nodos, una terminal de acceso SSH integrada y un sistema de gestión de archivos. El sistema valida con éxito un modelo no intrusivo y de bajo costo que democratiza el acceso a la computación avanzada, sirviendo como un valioso campo de pruebas para la investigación.
